# pattern-scope

./: .replit  LICENSE  README.md  app.py  pyproject.toml  replit.md  run_demo.py  tmp.csv
attached_assets/: Pasted-Got-you-Here-is-exactly-what-Replit-needs-to-build-so-y_1767921015926.txt
patternscope/: README.md  metrics.py  pyproject.toml  visualize.py
patternscope/patternscope/: core.py
patternscope/tests/: test_core.py
tests/: test_metrics.py
