[project]
name = "pattern-scope"
version = "0.1.0"
description = "Tiny CSV pattern analysis tool."
readme = "README.md"
license = "MIT"
authors = [{ name = "RJ Sabouhi" }]
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/rjsabouhi/pattern-scope"
